--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<script type="text/javascript" src="/js/script.js"></script>
 </head>
 <body>
+	<div class="shadow">
+	
 	<div class="maincontent">
 	<header>
 	<div class="container header-wrap">
@@ -206,12 +208,194 @@
 				<div class="row">
 					<h1>О центре</h1>
 					<div class="col-xs-12 col-md-5">
-						<div>
-							<div class="info">
-								<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </P>
+						<img src="" border="0">
+					</div>
+					<div class="col-xs-12 col-md-7">
+						<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </P>
 
-								<P>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</P>
+						<P>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</P>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container">
+				<div class="row">
+					<h1>Особенности центра</h1>
+					<h3>Подзаголовок</h3>
+					<div class="col-xs-12 col-md-6 specials-element">
+						<div class="image">
+							<img src="" border="0">
+						</div>
+						<div class="info">
+							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-6 specials-element">
+						<div class="image">
+							<img src="" border="0">
+						</div>
+						<div class="info">
+							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-6 specials-element">
+						<div class="image">
+							<img src="" border="0">
+						</div>
+						<div class="info">
+							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-6 specials-element">
+						<div class="image">
+							<img src="" border="0">
+						</div>
+						<div class="info">
+							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container nopadding">
+				<h1>Полезно знать</h1>
+				<div class="row">
+					<div class="col-xs-12 col-md-3">
+						<div class="image">
+							<a href="#"><img src="" border="0"></a>
+						</div>
+						<div class="info">
+							<h2>Заголовок</h2>
+							<P>Duis aute irure dolor in reprehenderit in </P>
+							<a href="#" class="goldbutton">Почитать</a>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-3">
+						<div class="image">
+							<a href="#"><img src="" border="0"></a>
+						</div>
+						<div class="info">
+							<h2>Заголовок</h2>
+							<P>Duis aute irure dolor in reprehenderit in </P>
+							<a href="#" class="goldbutton">Почитать</a>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-3">
+						<div class="image">
+							<a href="#"><img src="" border="0"></a>
+						</div>
+						<div class="info">
+							<h2>Заголовок</h2>
+							<P>Duis aute irure dolor in reprehenderit in </P>
+							<a href="#" class="goldbutton">Почитать</a>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-3">
+						<div class="image">
+							<a href="#"><img src="" border="0"></a>
+						</div>
+						<div class="info">
+							<h2>Заголовок</h2>
+							<P>Duis aute irure dolor in reprehenderit in </P>
+							<a href="#" class="goldbutton">Почитать</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container">
+				<h1>Наши сертификаты</h1>
+				<h3>Подзаголовок</h3>
+				<div class="row">
+					<div class="col-xs-12 col-md-12">
+						<div class="sertificat-slider">
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
 							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+							<div class="sertificat-element">
+								<a href="#"><img src="" border="0"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container">
+				<div class="row">
+					<h1>Обратная связь</h1>
+					<div class="col-xs-12 col-md-12">
+						<form class="feedback-block">
+							<label for="name">Имя*</label>
+							<input type="text" value="" id="name">
+							<label for="email">E-mail*</label>
+							<input type="text" value="" id="email">
+							<label for="phone">Телефон*</label>
+							<input type="text" value="" id="phone">
+							<label for="msg">Комментарий*</label>
+							<textarea id="msg"></textarea>
+							<input type="button" class="bluebutton" value="Отправить">
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container nopadding">
+				<div class="row">
+					<h1>Контакты</h1>
+					<div class="col-xs-12 col-md-12">
+						<div id="map">
+							<div class="info">
+								<div class="gray block">
+									<div class="home">г. Москва, пр. Ленинина, 78, оф.654</div>
+									<div class="phone">+7 897 654 3210</div>
+									<div class="mail">laoli.mail@yandex.ru</div>
+								</div>
+								<a href="#"><img src="/images/vk.png" border="0"></a>
+								<a href="#"><img src="/images/twitter.png" border="0"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section>
+			<div class="container nopadding">
+				<div class="row">
+					<h1>Событие дня</h1>
+					<div class="col-xs-12 col-md-12 news-element">
+						<div class="info">
+							<h2>Почему публичен умысел?</h2>
+							<P>Трагическое стабилизирует онтологический символический центр современного Лондона при любом их взаимном расположении.</P>
+							<a href="#" class="bluebutton">Подробнее</a>
 						</div>
 					</div>
 				</div>
@@ -256,6 +440,8 @@
 			</div>
 		</div>
 	</footer>
+	</div>
+	
 	</div>
 
 </body>
