--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</section>
 		
 		<section>
-			<div class="container">
+			<div class="container paddingleftmenu">
 				<div class="row">
 					<div class="col-xs-12 col-md-3 left-menu">
 						<ul>
@@ -123,60 +123,60 @@
 					<div class="col-xs-12 col-md-9">
 						<h1>Услуги</h1>
 						<div class="row">
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
 								<div class="image"><img src="/images/serv1.jpg" border="0"></div>
 								<div class="info">
 									<h3><a href="#">Массаж Гуаша спины</a></h3>
 									<P>Натуральный антипаразитарный сироп «Анпазит» изгоняет и уничтожает паразитов, обладает желчегонным действием, увлажняет легкие и прекращает кашель</P>
-									<a href="#" class="more goldbutton">Позвоните мне</a>
+									<a href="#" class="more goldbutton">Подробнее</a>
 								</div>
 							</div>
 						</div>
