--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							<li><a href="#">Комплексные программы</a></li>
 						</ul>
 					</div>
-					<div class="col-xs-12 col-md-9">
+					<div class="col-xs-12 col-md-9 services-block">
 						<h1>Услуги</h1>
 						<div class="row">
 							<div class="col-xs-12 col-md-4 services-element">
@@ -180,7 +180,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="bluebutton"><a href="#">Посмотреть все</a></div>
+						<a href="#" class="bluebutton">Посмотреть все</a>
 					</div>
 				</div>
 			</div>
@@ -191,7 +191,8 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-12">
 						<h1>Акция</h1>
-						<div>
+						<div class="actions-element">
+							<img src="/images/actions.jpg" border="0">
 							<div class="info">
 								<h2>Название акции</h2>
 								<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
@@ -208,7 +209,7 @@
 				<div class="row">
 					<h1>О центре</h1>
 					<div class="col-xs-12 col-md-5">
-						<img src="" border="0">
+						<img src="/images/about.jpg" border="0">
 					</div>
 					<div class="col-xs-12 col-md-7">
 						<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </P>
@@ -223,10 +224,10 @@
 			<div class="container">
 				<div class="row">
 					<h1>Особенности центра</h1>
-					<h3>Подзаголовок</h3>
+					<h3 style="text-align:center;">Подзаголовок</h3>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="" border="0">
+							<img src="/images/spec.jpg" border="0">
 						</div>
 						<div class="info">
 							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
@@ -234,7 +235,7 @@
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="" border="0">
+							<img src="/images/spec.jpg" border="0">
 						</div>
 						<div class="info">
 							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
@@ -242,7 +243,7 @@
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="" border="0">
+							<img src="/images/spec.jpg" border="0">
 						</div>
 						<div class="info">
 							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
@@ -250,7 +251,7 @@
 					</div>
 					<div class="col-xs-12 col-md-6 specials-element">
 						<div class="image">
-							<img src="" border="0">
+							<img src="/images/spec.jpg" border="0">
 						</div>
 						<div class="info">
 							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
@@ -261,46 +262,46 @@
 		</section>
 		
 		<section>
-			<div class="container nopadding">
+			<div class="container nopadding" style="background:#eaeaea;">
 				<h1>Полезно знать</h1>
-				<div class="row">
-					<div class="col-xs-12 col-md-3">
+				<div class="row extras-block">
+					<div class="col-xs-12 col-md-3 extras-element">
 						<div class="image">
-							<a href="#"><img src="" border="0"></a>
+							<a href="#"><img src="/images/extras.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h2>Заголовок</h2>
-							<P>Duis aute irure dolor in reprehenderit in </P>
+							<h2><a href="#">Заголовок</a></h2>
+							<P>Duis aute irure dolor<br>in reprehenderit in </P>
 							<a href="#" class="goldbutton">Почитать</a>
 						</div>
 					</div>
-					<div class="col-xs-12 col-md-3">
+					<div class="col-xs-12 col-md-3 extras-element">
 						<div class="image">
-							<a href="#"><img src="" border="0"></a>
+							<a href="#"><img src="/images/extras.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h2>Заголовок</h2>
-							<P>Duis aute irure dolor in reprehenderit in </P>
+							<h2><a href="#">Заголовок</a></h2>
+							<P>Duis aute irure dolor<br>in reprehenderit in </P>
 							<a href="#" class="goldbutton">Почитать</a>
 						</div>
 					</div>
-					<div class="col-xs-12 col-md-3">
+					<div class="col-xs-12 col-md-3 extras-element">
 						<div class="image">
-							<a href="#"><img src="" border="0"></a>
+							<a href="#"><img src="/images/extras.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h2>Заголовок</h2>
-							<P>Duis aute irure dolor in reprehenderit in </P>
+							<h2><a href="#">Заголовок</a></h2>
+							<P>Duis aute irure dolor<br>in reprehenderit in </P>
 							<a href="#" class="goldbutton">Почитать</a>
 						</div>
 					</div>
-					<div class="col-xs-12 col-md-3">
+					<div class="col-xs-12 col-md-3 extras-element">
 						<div class="image">
-							<a href="#"><img src="" border="0"></a>
+							<a href="#"><img src="/images/extras.jpg" border="0"></a>
 						</div>
 						<div class="info">
-							<h2>Заголовок</h2>
-							<P>Duis aute irure dolor in reprehenderit in </P>
+							<h2><a href="#">Заголовок</a></h2>
+							<P>Duis aute irure dolor<br>in reprehenderit in </P>
 							<a href="#" class="goldbutton">Почитать</a>
 						</div>
 					</div>
