--- a/index.html
+++ b/index.html
@@ -312,33 +312,33 @@
 		<section>
 			<div class="container">
 				<h1>Наши сертификаты</h1>
-				<h3>Подзаголовок</h3>
+				<h3 style="text-align:center">Подзаголовок</h3>
 				<div class="row">
 					<div class="col-xs-12 col-md-12">
 						<div class="sertificat-slider">
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 							<div class="sertificat-element">
-								<a href="#"><img src="" border="0"></a>
+								<a href="#"><img src="/images/sert.jpg" border="0"></a>
 							</div>
 						</div>
 					</div>
