--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 			<div class="container">
 				<div class="row">
 					<h1>Обратная связь</h1>
-					<div class="col-xs-12 col-md-12">
+					<div class="col-xs-12 col-md-8 col-md-offset-2">
 						<form class="feedback-block">
 							<label for="name">Имя*</label>
 							<input type="text" value="" id="name">
@@ -383,6 +383,23 @@
 								<a href="#"><img src="/images/twitter.png" border="0"></a>
 							</div>
 						</div>
+						<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full" data-id="dgLoader"></script>
+						<script type="text/javascript">
+							$(document).ready(function(){
+							});
+							
+							var map;
+
+							DG.then(function () {
+								map = DG.map('map', {
+									"center": [54.98, 82.89],
+									"zoom": 13,
+									"scrollWheelZoom": false
+								});
+
+								DG.marker([54.98, 82.89]).addTo(map).bindPopup('Вы кликнули по мне!');
+							});
+						</script>
 					</div>
 				</div>
 			</div>
