--- a/index.html
+++ b/index.html
@@ -379,8 +379,10 @@
 									<div class="phone">+7 897 654 3210</div>
 									<div class="mail">laoli.mail@yandex.ru</div>
 								</div>
-								<a href="#"><img src="/images/vk.png" border="0"></a>
-								<a href="#"><img src="/images/twitter.png" border="0"></a>
+								<div class="soc">
+									<a href="#"><img src="/images/vk.png" border="0"></a>
+									<a href="#"><img src="/images/twitter.png" border="0"></a>
+								</div>
 							</div>
 						</div>
 						<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full" data-id="dgLoader"></script>
@@ -410,6 +412,7 @@
 				<div class="row">
 					<h1>Событие дня</h1>
 					<div class="col-xs-12 col-md-12 news-element">
+						<img src="/images/news.jpg" border="0">
 						<div class="info">
 							<h2>Почему публичен умысел?</h2>
 							<P>Трагическое стабилизирует онтологический символический центр современного Лондона при любом их взаимном расположении.</P>
@@ -427,33 +430,37 @@
 	
 	<div class="footer-wrap">
 	<footer>
-		<div class="container">
+		<div class="container nopadding">
 			<div class="row footer-block">
-				<div class="col-xs-12 col-md-5">
-					<P>Copyright © ООО "Кузбасс Капитал Инвест", 2007-2016<br>
-					650066, Россия, г.Кемерово, пр.Ленина, 61</P>
-					<P><img src="/images/metrika.jpg" border="0"></P>
+				<div class="col-xs-12 col-md-4">
+					<P>© 2015 «Лаоли». Все права защищены</P>
+					<div class="home">г. Москва, пр. Ленинина, 78, оф.654</div>
+					<div class="phone">+7 897 654 3210</div>
+					<div class="mail">laoli.mail@yandex.ru</div>
 				</div>
-				<div class="col-xs-12 col-md-5">
+				<div class="col-xs-12 col-md-6">
 					<nav>
 						<ul class="footer-menu">
-							<li><a href="/about.html">О компании</a></li>
-							<li><a href="/rent.html">Аренда</a></li>
-							<li><a href="/sale.html">Продажа</a></li>
-							<li><a href="/request.html">Покупка</a></li>
-							<li><a href="/tenders.html">Тендеры</a></li>
+							<li><a href="#">О нас</a></li>
+							<li><a href="#">Услуги</a></li>
+							<li><a href="#">Продукция Ли Вест</a></li>
+							<li><a href="#">Цигун</a></li>
+							<li><a href="#">Акции</a></li>
+							<li><a href="#">События</a></li>
 						</ul>
 						<ul class="footer-menu">
-							<li><a href="/investor.html">Инвесторам</a></li>
-							<li><a href="/news.html">События компании</a></li>
-							<li><a href="/gallery.html">Фотогалерея</a></li>
-							<li><a href="/info.html">Контакты</a></li>
-							<li><a href="/kl.html">Важно</a></li>
+							<li><a href="#">Статьи</a></li>
+							<li><a href="#">Подарочный сертификат</a></li>
+							<li><a href="#">Консультация врача ТКМ</a></li>
+							<li><a href="#">Контакты</a></li>
+							<li><a href="#">Отзывы</a></li>
 						</ul>
 					</nav>
 				</div>
 				<div class="col-xs-12 col-md-2">
-					<a href="#" style="text-align:right;"><img src="/images/ll.png"></a><br><br>
+					<a href="#" style="float:right; margin:0 5px;"><img src="/images/twitter.png" border="0" width="30"></a>
+					<a href="#" style="float:right; margin:0 5px;"><img src="/images/vk.png" border="0" width="30"></a>
+					<a href="#" style="float:right; margin-top:15px;"><img src="/images/ll.png"></a><br><br>
 				</div>
 			</div>
 		</div>
