--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
 					<div class="col-xs-12 col-md-12 menu-block">
 						<ul class="menu">
 							<li><a href="#">О нас</a></li>
-							<li><a href="#">Услуги</a></li>
+							<li class="active"><a href="#">Услуги</a></li>
 							<li><a href="#">Продукция Ли Вест</a></li>
 							<li><a href="#">Цигун</a></li>
 							<li><a href="#">Акции</a></li>
@@ -73,55 +73,26 @@
 				</div>
 			</div>
 		</section>
-		
-		<section>
-			<div class="container nopadding">
-				<div class="row">
-					<div class="col-xs-12 col-md-12">
-						<img src="/images/media.jpg" border="0" width="100%">
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 1</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 2</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 3</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
+
 		<section>
 			<div class="container paddingleftmenu">
 				<div class="row">
-					<div class="col-xs-12 col-md-3 left-menu">
+					<div class="col-xs-12 col-md-3 left-menu livest">
+						<h3 class="text-uppercase"><strong>Продукция&nbsp;Ли Вест</strong></h3>
 						<ul>
-							<li class="active"><a href="#">Оздоровительные</a>
-								<ul>
-									<li><a href="#">Массаж Гуаша спины</a></li>
-									<li><a href="#">Массаж ГУаша головы</a></li>
-									<li class="active"><a href="#">Массаж Гуаша спины и головы</a></li>
-									<li><a href="#">Массаж Гуаша ног</a></li>
-									<li><a href="#">Массаж со Стихиями</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Косметические</a></li>
-							<li><a href="#">Коррекция фигуры</a></li>
-							<li><a href="#">СПА</a></li>
-							<li><a href="#">Комплексные программы</a></li>
+							<li class="active"><a href="#">Укрепляющие иммунитет</a></li>
+							<li><a href="#">Противовоспалительные</a></li>
+							<li><a href="#">Нормализующие пищеварение</a></li>
+							<li><a href="#">Нормализующие кровообращение</a></li>
+							<li><a href="#">Женская линия</a></li>
+							<li><a href="#">Для мочеполовой системы</a></li>
+							<li><a href="#">Оздоровительные свечи</a></li>
+							<li><a href="#">Косметическая серия Джинлонг</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-12 col-md-9 services-block">
-						<h1>Услуги</h1>
+						<h1 class="text-uppercase text-left"><strong>Укрепляющие иммунитет</strong></h1>
+						<P>Равным образом сложившаяся структура организации в значительной степени обуславливает создание форм развития. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа новых предложений.</P>
 						<div class="row">
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
