--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
 					<div class="col-xs-12 col-md-12 menu-block">
 						<ul class="menu">
 							<li><a href="#">О нас</a></li>
-							<li><a href="#">Услуги</a></li>
+							<li class="active"><a href="#">Услуги</a></li>
 							<li><a href="#">Продукция Ли Вест</a></li>
 							<li><a href="#">Цигун</a></li>
 							<li><a href="#">Акции</a></li>
@@ -69,32 +69,6 @@
 							<li><a href="#">Контакты</a></li>
 							<li><a href="#">Отзывы</a></li>
 						</ul>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container nopadding">
-				<div class="row">
-					<div class="col-xs-12 col-md-12">
-						<img src="/images/media.jpg" border="0" width="100%">
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 1</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 2</div>
-					</div>
-					<div class="col-xs-12 col-md-4">
-						<div class="advantages">Выгода 3</div>
 					</div>
 				</div>
 			</div>
@@ -121,7 +95,8 @@
 						</ul>
 					</div>
 					<div class="col-xs-12 col-md-9 services-block">
-						<h1>Услуги</h1>
+						<h1><span>Услуги ></span> Оздоровительные</h1>
+						<P style="text-align:center;">Равным образом сложившаяся структура организации в значительной степени обуславливает создание форм развития. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа новых предложений.</P>
 						<div class="row">
 							<div class="col-xs-12 col-md-4 services-element">
 								<h3><a href="#">Массаж Гуаша спины</a></h3>
@@ -180,232 +155,11 @@
 								</div>
 							</div>
 						</div>
-						<a href="#" class="bluebutton">Посмотреть все</a>
 					</div>
 				</div>
 			</div>
 		</section>
 		
-		<section>
-			<div class="container nopadding">
-				<div class="row">
-					<div class="col-xs-12 col-md-12">
-						<h1>Акция</h1>
-						<div class="actions-element">
-							<img src="/images/actions.jpg" border="0">
-							<div class="info">
-								<h2>Название акции</h2>
-								<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
-								<h2>до 22 апреля!</h2>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<div class="row">
-					<h1>О центре</h1>
-					<div class="col-xs-12 col-md-5">
-						<img src="/images/about.jpg" border="0">
-					</div>
-					<div class="col-xs-12 col-md-7">
-						<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </P>
-
-						<P>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</P>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<div class="row">
-					<h1>Особенности центра</h1>
-					<h3 style="text-align:center;">Подзаголовок</h3>
-					<div class="col-xs-12 col-md-6 specials-element">
-						<div class="image">
-							<img src="/images/spec.jpg" border="0">
-						</div>
-						<div class="info">
-							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-6 specials-element">
-						<div class="image">
-							<img src="/images/spec.jpg" border="0">
-						</div>
-						<div class="info">
-							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-6 specials-element">
-						<div class="image">
-							<img src="/images/spec.jpg" border="0">
-						</div>
-						<div class="info">
-							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-6 specials-element">
-						<div class="image">
-							<img src="/images/spec.jpg" border="0">
-						</div>
-						<div class="info">
-							<P>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</P>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container nopadding" style="background:#eaeaea;">
-				<h1>Полезно знать</h1>
-				<div class="row extras-block">
-					<div class="col-xs-12 col-md-3 extras-element">
-						<div class="image">
-							<a href="#"><img src="/images/extras.jpg" border="0"></a>
-						</div>
-						<div class="info">
-							<h2><a href="#">Заголовок</a></h2>
-							<P>Duis aute irure dolor<br>in reprehenderit in </P>
-							<a href="#" class="goldbutton">Почитать</a>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-3 extras-element">
-						<div class="image">
-							<a href="#"><img src="/images/extras.jpg" border="0"></a>
-						</div>
-						<div class="info">
-							<h2><a href="#">Заголовок</a></h2>
-							<P>Duis aute irure dolor<br>in reprehenderit in </P>
-							<a href="#" class="goldbutton">Почитать</a>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-3 extras-element">
-						<div class="image">
-							<a href="#"><img src="/images/extras.jpg" border="0"></a>
-						</div>
-						<div class="info">
-							<h2><a href="#">Заголовок</a></h2>
-							<P>Duis aute irure dolor<br>in reprehenderit in </P>
-							<a href="#" class="goldbutton">Почитать</a>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-3 extras-element">
-						<div class="image">
-							<a href="#"><img src="/images/extras.jpg" border="0"></a>
-						</div>
-						<div class="info">
-							<h2><a href="#">Заголовок</a></h2>
-							<P>Duis aute irure dolor<br>in reprehenderit in </P>
-							<a href="#" class="goldbutton">Почитать</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<h1>Наши сертификаты</h1>
-				<h3 style="text-align:center">Подзаголовок</h3>
-				<div class="row">
-					<div class="col-xs-12 col-md-12">
-						<div class="sertificat-slider">
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-							<div class="sertificat-element">
-								<a href="#"><img src="/images/sert.jpg" border="0"></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container">
-				<div class="row">
-					<h1>Обратная связь</h1>
-					<div class="col-xs-12 col-md-8 col-md-offset-2">
-						<form class="feedback-block">
-							<label for="name">Имя*</label>
-							<input type="text" value="" id="name">
-							<label for="email">E-mail*</label>
-							<input type="text" value="" id="email">
-							<label for="phone">Телефон*</label>
-							<input type="text" value="" id="phone">
-							<label for="msg">Комментарий*</label>
-							<textarea id="msg"></textarea>
-							<input type="button" class="bluebutton" value="Отправить">
-						</form>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		<section>
-			<div class="container nopadding">
-				<div class="row">
-					<h1>Контакты</h1>
-					<div class="col-xs-12 col-md-12">
-						<div id="map">
-							<div class="info">
-								<div class="gray block">
-									<div class="home">г. Москва, пр. Ленинина, 78, оф.654</div>
-									<div class="phone">+7 897 654 3210</div>
-									<div class="mail">laoli.mail@yandex.ru</div>
-								</div>
-								<div class="soc">
-									<a href="#"><img src="/images/vk.png" border="0"></a>
-									<a href="#"><img src="/images/twitter.png" border="0"></a>
-								</div>
-							</div>
-						</div>
-						<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full" data-id="dgLoader"></script>
-						<script type="text/javascript">
-							$(document).ready(function(){
-							});
-							
-							var map;
-
-							DG.then(function () {
-								map = DG.map('map', {
-									"center": [54.98, 82.89],
-									"zoom": 13,
-									"scrollWheelZoom": false
-								});
-
-								DG.marker([54.98, 82.89]).addTo(map).bindPopup('Вы кликнули по мне!');
-							});
-						</script>
-					</div>
-				</div>
-			</div>
-		</section>
 		
 		<section>
 			<div class="container nopadding">
